# AI-Agents-JBS-Server

./: .gitignore  README.md  requirements.txt
api/: server.py  validations.py
api/agents/automated_budget_agent/: crew.py  main.py
api/agents/automated_budget_agent/config/: agents.yaml  tasks.yaml
api/agents/chatbot_agent/: README.md  crew.py  forecast.csv  main.py  pyproject.toml
api/agents/chatbot_agent/config/: agents.yaml  tasks.yaml
api/agents/claims_processor/: crew.py  main.py  pyproject.toml  requirements.txt
api/agents/claims_processor/config/: agents.yaml  tasks.yaml
api/agents/claims_processor/pdf_folder/old_tests/: breached.docx  correct.docx  rules.docx
api/agents/competitor_analysis_agent/: crew.py  main.py
api/agents/competitor_analysis_agent/config/: agents.yaml  tasks.yaml
api/agents/contract_optimization_agent/: README.md  crew.py  main.py  pyproject.toml
api/agents/contract_optimization_agent/config/: agents.yaml  tasks.yaml
api/agents/contract_summarizer_agent/: README.md  crew.py  main.py  pyproject.toml
api/agents/contract_summarizer_agent/config/: agents.yaml  tasks.yaml
api/agents/customer_reach_agent/: README.md  crew.py  main.py  pyproject.toml
api/agents/customer_reach_agent/config/: agents.yaml  tasks.yaml
api/agents/customer_reach_agent/tools/: custom_tool.py
api/agents/customer_sentiment_agent/: README.md  crew.py  main.py  pyproject.toml
api/agents/customer_sentiment_agent/config/: agents.yaml  tasks.yaml
api/agents/customer_sentiment_agent/tools/: custom_tool.py
api/agents/digital_twin_agent/: README.md  crew.py  evaluation_report.md  main.py  pyproject.toml
api/agents/digital_twin_agent/config/: agents.yaml  tasks.yaml
api/agents/document_processor/: crew.py  main.py  pyproject.toml
api/agents/document_processor/config/: agents.yaml  tasks.yaml
api/agents/document_processor/pdf_folder/: test_document.docx  test_document.txt
api/agents/emerging_risk_agent/: README.md  crew.py  main.py  pyproject.toml
api/agents/emerging_risk_agent/config/: agents.yaml  tasks.yaml
api/agents/marketing_agent/: crew.py  main.py
api/agents/marketing_agent/config/: agents.yaml  tasks.yaml
api/agents/onboarding_chatbot/: crew.py  main.py  pyproject.toml  requirements.txt
api/agents/onboarding_chatbot/config/: agents.yaml  tasks.yaml
api/agents/person_research_agent/: README.md  crew.py  main.py  pyproject.toml
api/agents/person_research_agent/config/: agents.yaml  tasks.yaml
api/agents/personalized_recommendation_agent/: crew.py  main.py
api/agents/personalized_recommendation_agent/config/: agents.yaml  tasks.yaml
api/agents/policy_word_explainer_agent/: README.md  crew.py  main.py  pyproject.toml
api/agents/policy_word_explainer_agent/config/: agents.yaml  tasks.yaml
api/agents/seo_agent/: crew.py
api/agents/seo_agent/config/: agents.yaml  tasks.yaml
api/agents/user_id_agent/: README.md  crew.py  main.py  pyproject.toml
api/agents/user_id_agent/config/: agents.yaml  tasks.yaml
api/agents/user_id_agent/tools/: custom_tool.py
api/agents/user_stories_agent/: README.md  crew.py  main.py  pyproject.toml
api/agents/user_stories_agent/config/: agents.yaml  tasks.yaml
api/agents/user_stories_agent/tools/: custom_tool.py
api/agents/virtual_assistant_agent/: README.md  crew.py  main.py  pyproject.toml
api/agents/virtual_assistant_agent/config/: agents.yaml  tasks.yaml
api/utils/: index.py  jwtbearer.py
userTestFiles/: budget.csv  contract.txt  forecast.csv  medical-contract.docx
