[project]
name = "claims_processor"
version = "0.1.0"
description = "claims_processor using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.83.0,<1.0.0"
]

[project.scripts]
claims_processor = "claims_processor.main:run"
run_crew = "claims_processor.main:run"
train = "claims_processor.main:train"
replay = "claims_processor.main:replay"
test = "claims_processor.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
