[project]
name = "contract_summarizer_agent"
version = "0.1.0"
description = "contract-summarizer-agent using crewAI"
authors = [{ name = "Sabih", email = "malicksabih@gmail.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.83.0,<1.0.0"
]

[project.scripts]
contract_summarizer_agent = "contract_summarizer_agent.main:run"
run_crew = "contract_summarizer_agent.main:run"
train = "contract_summarizer_agent.main:train"
replay = "contract_summarizer_agent.main:replay"
test = "contract_summarizer_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
