[project]
name = "customer_sentiment_agent"
version = "0.1.0"
description = "customer_sentiment_agent using crewAI"
authors = [{ name = "Sabih", email = "malicksabih@gmail.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0"
]

[project.scripts]
customer_sentiment_agent = "customer_sentiment_agent.main:run"
run_crew = "customer_sentiment_agent.main:run"
train = "customer_sentiment_agent.main:train"
replay = "customer_sentiment_agent.main:replay"
test = "customer_sentiment_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
