[project]
name = "digital_twin_agent"
version = "0.1.0"
description = "digital_twin_agent using crewAI"
authors = [{ name = "Sabih", email = "malicksabih@gmail.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0"
]

[project.scripts]
digital_twin_agent = "digital_twin_agent.main:run"
run_crew = "digital_twin_agent.main:run"
train = "digital_twin_agent.main:train"
replay = "digital_twin_agent.main:replay"
test = "digital_twin_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
