[project]
name = "document_processor"
version = "0.1.0"
description = "document_processor using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.83.0,<1.0.0"
]

[project.scripts]
document_processor = "document_processor.main:run"
run_crew = "document_processor.main:run"
train = "document_processor.main:train"
replay = "document_processor.main:replay"
test = "document_processor.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
