[project]
name = "onboarding_chatbot"
version = "0.1.0"
description = "onboarding_chatbot using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0"
]

[project.scripts]
onboarding_chatbot = "onboarding_chatbot.main:run"
run_crew = "onboarding_chatbot.main:run"
train = "onboarding_chatbot.main:train"
replay = "onboarding_chatbot.main:replay"
test = "onboarding_chatbot.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
