[project]
name = "policy_word_explainer_agent"
version = "0.1.0"
description = "policy-word-explainer-agent using crewAI"
authors = [{ name = "Sabih", email = "malicksabih@gmail.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0"
]

[project.scripts]
policy_word_explainer_agent = "policy_word_explainer_agent.main:run"
run_crew = "policy_word_explainer_agent.main:run"
train = "policy_word_explainer_agent.main:train"
replay = "policy_word_explainer_agent.main:replay"
test = "policy_word_explainer_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
